--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h2>👋🏼 Hi I am</h2>
     <h1>Tanya Gvozdyova</h1>
     <p>ua Front-end developer, based in Ukraine</p>
-    <button>Contact Me</button> <button>About Me</button>
+    <span
+      ><button class="main-button">Contact Me</button>
+      <button class="second-button">About Me</button></span
+    >
   </body>
 </html>
