Created about.html page and linked 2 pages

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1>Tanya Gvozdyova</h1>
     <p>ua Front-end developer, based in Ukraine</p>
     <span
-      ><button class="main-button">Contact Me</button>
-      <button class="second-button">About Me</button></span
-    >
+      ><a href="about.html#contact"><button class="main-button">Contact Me</button></a>
+      <a href="about.html"><button class="second-button">About Me</button></span
+    ></a>
   </body>
 </html>
