--- a/about.html
+++ b/about.html
@@ -13,9 +13,13 @@
       span {
         display: flex;
         justify-content: space-between;
+
+        padding: 30px;
       }
       p {
         background-color: rgb(239, 192, 236);
+        width: 30%;
+        padding: 20px;
       }
     </style>
   </head>
