--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tanya Gvozdyova</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h2>👋🏼 Hi I am</h2>
     <h1>Tanya Gvozdyova</h1>
-    <p>ua Front-end developer, based in Ukraine</p>
+    <h3>ua Front-end developer, based in Ukraine</h3>
     <span
       ><a href="about.html#contact"><button class="main-button">Contact Me</button></a>
       <a href="about.html"><button class="second-button">About Me</button></span
