added div to contact section
+added br

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
         alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum. <br />
+        blanditiis harum. <br /><br />
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
         alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
@@ -43,16 +43,18 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
         alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.<br />
+        blanditiis harum.<br /><br />
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
         alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
         blanditiis harum.
       </p></span
     >
-    <h2>Contact me</h2>
-    <a href="mailto:gvozdyova.tatyana@gmail.com" id="contact"
-      >gvozdyova.tatyana@gmail.com</a
-    >
+    <div id="contact">
+      <h2>Contact me</h2>
+      <a href="mailto:gvozdyova.tatyana@gmail.com"
+        >gvozdyova.tatyana@gmail.com</a
+      >
+    </div>
   </body>
 </html>
