finalized the style

--- a/about.html
+++ b/about.html
@@ -5,29 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Tanya Gvozdyova</title>
-    <style>
-      body {
-        padding: 0 20px;
-        text-align: center;
-      }
-      span {
-        display: flex;
-        justify-content: space-between;
 
-        padding: 30px;
-      }
-      p {
-        background-color: rgb(239, 192, 236);
-        width: 30%;
-        padding: 20px;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <a href="index.html">Back to homepage</a>
+    <a href="index.html" class="homepage-link">Back to homepage</a>
     <h1>About me</h1>
     <h3>Front-end developer from Kyiv, Ukraine</h3>
-    <span
+    <span class="about-paragraphs"
       ><p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
@@ -52,7 +37,7 @@
     >
     <div id="contact">
       <h2>Contact me</h2>
-      <a href="mailto:gvozdyova.tatyana@gmail.com"
+      <a href="mailto:gvozdyova.tatyana@gmail.com" class="email-link"
         >gvozdyova.tatyana@gmail.com</a
       >
     </div>
