--- a/index.html
+++ b/index.html
@@ -5,15 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tanya Gvozdyova</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h2>👋🏼 Hi I am</h2>
-    <h1>Tanya Gvozdyova</h1>
-    <h3>ua Front-end developer, based in Ukraine</h3>
-    <span
-      ><a href="about.html#contact"><button class="main-button">Contact Me</button></a>
-      <a href="about.html"><button class="second-button">About Me</button></span
-    ></a>
+    <nav class="navbar navbar-expand-lg sticky bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Tanya Gvozdyova</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div>
+      <h2>👋🏼 Hi I am</h2>
+      <h1>Tanya Gvozdyova</h1>
+      <h3>ua Front-end developer, based in Ukraine</h3>
+      <span
+        ><a href="about.html#contact"
+          ><button class="main-button">Contact Me</button></a
+        >
+        <a href="about.html"
+          ><button class="second-button">About Me</button></a
+        ></span
+      >
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm text-start">
+            <h2>Weather app</h2>
+            <p class="bg-white">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a href="#"
+              ><button class="main-button mt-0">Launch Weather App</button></a
+            >
+          </div>
+          <div class="col-sm">
+            <img
+              src="media/Screenshot_2023_01_07-2.jpg"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
