--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         ></span
       >
 
-      <div class="container">
+      <div class="container mt-4">
         <div class="row">
           <div class="col-sm text-start">
             <h2>Weather app</h2>
@@ -80,8 +80,34 @@
             <img
               src="media/Screenshot_2023_01_07-2.jpg"
               alt=""
-              class="img-fluid"
+              class="img-fluid img-shadow"
             />
+          </div>
+        </div>
+      </div>
+
+      <div class="container mt-5 pt-5">
+        <div class="row">
+          <div class="col-sm">
+            <img
+              src="media/Screenshot_2023_01_08-1.jpg"
+              alt=""
+              class="img-fluid img-shadow"
+            />
+          </div>
+          <div class="col-sm text-start">
+            <h2>Photoshoot app</h2>
+            <p class="bg-white">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis quia, dignissimos nam ratione veniam quibusdam porro
+              omnis quam vel eos eveniet alias temporibus deserunt veritatis
+              minima fugiat explicabo eum dolore.
+            </p>
+            <a href="#"
+              ><button class="main-button mt-0">
+                Launch Photoshoot App
+              </button></a
+            >
           </div>
         </div>
       </div>
