--- a/about.html
+++ b/about.html
@@ -20,37 +20,74 @@
     ></script>
   </head>
   <body>
-    <a href="index.html" class="homepage-link">Back to homepage</a>
-    <h1>About me</h1>
-    <h3>Front-end developer from Kyiv, Ukraine</h3>
-    <span class="about-paragraphs"
-      ><p class="width-p">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum. <br /><br />
+    <nav class="navbar navbar-expand-lg sticky bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Tanya Gvozdyova</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!--<a href="index.html" class="homepage-link">Back to homepage</a>
+  -->
+    <div class="m-5 pt-5">
+      <h1>About me</h1>
+      <h3>Front-end developer from Kyiv, Ukraine</h3>
+      <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
         alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
         blanditiis harum.
       </p>
-      <br />
-      <p class="width-p">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.<br /><br />
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-      </p></span
-    >
-    <div id="contact">
-      <h2>Contact me</h2>
-      <a href="mailto:gvozdyova.tatyana@gmail.com" class="email-link"
-        >gvozdyova.tatyana@gmail.com</a
-      >
+      <div class="container mt-4 img-fluid">
+        <div class="row">
+          <div class="col-sm p-4">
+            <img
+              src="media/Screenshot_2023_01_08-2.jpg"
+              alt=""
+              class="img-fluid img-shadow"
+            />
+          </div>
+          <div class="col-sm p-4">
+            <img
+              src="media/Screenshot_2023_01_08-3.jpg"
+              alt=""
+              class="img-fluid img-shadow"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div id="contact m-5 pt-5">
+        <h2>Contact me</h2>
+        <a href="mailto:gvozdyova.tatyana@gmail.com" class="email-link"
+          >gvozdyova.tatyana@gmail.com</a
+        >
+      </div>
     </div>
   </body>
 </html>
