--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About me</a>
+              <a class="nav-link" href="about.html">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact me</a>
@@ -49,7 +49,7 @@
       </div>
     </nav>
 
-    <div>
+    <div class="m-5 pt-5">
       <h2>👋🏼 Hi I am</h2>
       <h1>Tanya Gvozdyova</h1>
       <h3>ua Front-end developer, based in Ukraine</h3>
