--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Tanya Gvozdyova</a>
+        <a class="navbar-brand" href="index.html">Tanya Gvozdyova</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,12 +37,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About me</a>
+              <a class="nav-link active" href="#">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact me</a>
