--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Tanya Gvozdyova</a>
+        <a class="navbar-brand" href="index.html">Tanya Gvozdyova</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,7 +36,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About me</a>
