--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Tanya Gvozdyova</title>
+    <meta
+      name="description"
+      content="About projects of front-end developer Gvozdyova Tanya"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +26,9 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Tanya Gvozdyova</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Tanya Gvozdyova</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -37,13 +43,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">About me</a>
+              <a
+                class="nav-link active"
+                href="about.html"
+                title="About Tanya Gvozdyova"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact Tanya Gvozdyova"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -66,23 +88,26 @@
           <div class="col-sm p-4">
             <img
               src="media/Screenshot_2023_01_08-2.jpg"
-              alt=""
+              alt="Weather project"
               class="img-fluid img-shadow"
             />
           </div>
           <div class="col-sm p-4">
             <img
               src="media/Screenshot_2023_01_08-3.jpg"
-              alt=""
+              alt="A projector Photoshoot project"
               class="img-fluid img-shadow"
             />
           </div>
         </div>
       </div>
 
-      <div id="contact m-5 pt-5">
+      <div id="contact" class="m-3 pt-3">
         <h2>Contact me</h2>
-        <a href="mailto:gvozdyova.tatyana@gmail.com" class="email-link"
+        <a
+          href="mailto:gvozdyova.tatyana@gmail.com"
+          class="email-link"
+          title="Contact me by email"
           >gvozdyova.tatyana@gmail.com</a
         >
       </div>
