--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tanya Gvozdyova</title>
+    <title>Front-end developer - Tanya Gvozdyova</title>
+    <meta
+      name="description"
+      content="The website with portfolio of front-end developer Tanya Gvozdyova"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +25,9 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Tanya Gvozdyova</a>
+        <a class="navbar-brand" href="index.html" title="Homepage"
+          >Tanya Gvozdyova</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -36,15 +42,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a
+                class="nav-link"
+                href="about.html"
+                title="About Tanya Gvozdyova"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact Tanya Gvozdyova"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -57,10 +77,14 @@
       <h3>ua Front-end developer, based in Ukraine</h3>
       <span
         ><a href="about.html#contact"
-          ><button class="main-button">Contact Me</button></a
+          ><button class="main-button" title="Contact Tanya Gvozdyova">
+            Contact Me
+          </button></a
         >
         <a href="about.html"
-          ><button class="second-button">About Me</button></a
+          ><button class="second-button" title="About Tanya Gvozdyova">
+            About Me
+          </button></a
         ></span
       >
 
@@ -75,13 +99,15 @@
               minima fugiat explicabo eum dolore.
             </p>
             <a href="#"
-              ><button class="main-button mt-0">Launch Weather App</button></a
+              ><button class="main-button mt-0" title="Weather project">
+                Launch Weather App
+              </button></a
             >
           </div>
           <div class="col-sm">
             <img
               src="media/Screenshot_2023_01_07-2.jpg"
-              alt=""
+              alt="Weather app"
               class="img-fluid img-shadow"
             />
           </div>
@@ -93,7 +119,7 @@
           <div class="col-sm">
             <img
               src="media/Screenshot_2023_01_08-1.jpg"
-              alt=""
+              alt="Photoshoot project"
               class="img-fluid img-shadow"
             />
           </div>
@@ -106,7 +132,7 @@
               minima fugiat explicabo eum dolore.
             </p>
             <a href="#"
-              ><button class="main-button mt-0">
+              ><button class="main-button mt-0" title="Photoshoot project">
                 Launch Photoshoot App
               </button></a
             >
