Worked on images

--- a/about.html
+++ b/about.html
@@ -87,16 +87,16 @@
         <div class="row">
           <div class="col-sm p-4">
             <img
-              src="media/Screenshot_2023_01_08-2.jpg"
+              src="media/Screenshot_2023_01_07-2.jpg"
               alt="Weather project"
-              class="img-fluid img-shadow"
+              class="img-fluid p-2 rounded shadow"
             />
           </div>
           <div class="col-sm p-4">
             <img
-              src="media/Screenshot_2023_01_08-3.jpg"
+              src="media/Screenshot_2023_01_12-2.jpg"
               alt="A projector Photoshoot project"
-              class="img-fluid img-shadow"
+              class="img-fluid p-2 rounded shadow"
             />
           </div>
         </div>
