--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <img
               src="media/Screenshot_2023_01_07-2.jpg"
               alt="Weather app"
-              class="img-fluid img-shadow"
+              class="img-fluid rounded"
             />
           </div>
         </div>
@@ -118,9 +118,9 @@
         <div class="row">
           <div class="col-sm">
             <img
-              src="media/Screenshot_2023_01_08-1.jpg"
+              src="media/Screenshot_2023_01_12-2.jpg"
               alt="Photoshoot project"
-              class="img-fluid img-shadow"
+              class="img-fluid rounded"
             />
           </div>
           <div class="col-sm text-start">
