Worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <img
               src="media/Screenshot_2023_01_07-2.jpg"
               alt="Weather app"
-              class="img-fluid rounded"
+              class="img-fluid rounded responsive"
             />
           </div>
         </div>
@@ -120,7 +120,7 @@
             <img
               src="media/Screenshot_2023_01_12-2.jpg"
               alt="Photoshoot project"
-              class="img-fluid rounded"
+              class="img-fluid rounded responsive"
             />
           </div>
           <div class="col-sm text-start">
