Centered buttons in responsive part

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="#"
+            <a href="#" class="project-link"
               ><button class="main-button mt-0" title="Weather project">
                 Launch Weather App
               </button></a
@@ -131,7 +131,7 @@
               omnis quam vel eos eveniet alias temporibus deserunt veritatis
               minima fugiat explicabo eum dolore.
             </p>
-            <a href="#"
+            <a href="#" class="project-link"
               ><button class="main-button mt-0" title="Photoshoot project">
                 Launch Photoshoot App
               </button></a
