Deleted margin in button style and padding in span

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h3>ua Front-end developer, based in Ukraine</h3>
       <span
         ><a href="about.html#contact"
-          ><button class="main-button" title="Contact Tanya Gvozdyova">
+          ><button class="main-button me-5" title="Contact Tanya Gvozdyova">
             Contact Me
           </button></a
         >
